# WeldFormGPU

./: .gitmodules  CMakeLists.txt  Code Description.txt  DEVLOG.md  DEVLOG.txt  GPU_SpeedUp.ipynb  README.md  README.txt  changelog.md
.ipynb_checkpoints/: GPU_SpeedUp-checkpoint.ipynb
cuda_tests/: 1230_part_ts1e-7.cu  CMakeLists.txt  kernel.cu  nsearch_ex2.cu  roundoff_test.cu
docs/: Entry.txt  manual.tex
examples/: CMakeLists.txt
examples/input/: Compression.json  Compression_AxiSymm.json  Contact_Compression.json  Contact_Compression_2surf.json  Forging.json  MetalCut_2D_AA_red_rac10um.json  MetalCut_3D_AA_red_rac10um_fraser.json  MetalCut_mm.json  Traction.json  Traction_JC.json
refs/: thermal.cu
src/: Boundary_Condition.h  CMakeLists.txt  Domain.cpp  Domain.h  Input.h  Mesh.cpp  Mesh.h  NastranReader.cpp  NastranReader.h  NbSearch.cpp  NbSearch_NEW.cpp  Neighbour.cpp  Output.cpp  Particle.cpp  Particle.h  Table.h  Thermal.cpp  Thermal.cu  Thermal_ONLY4REF_NOTUSE.cpp  Vector.cc  Vector.cpp  Vector.h  WeldForm.cpp  WeldFormGPU.cpp  WeldFormGPU.cu  csvRead.cpp  main.cpp  main.cu  main.cu.bak  main_contact.cu  main_contact_OLD.cu  main_mech.cu  main_mech_cuns.cu  main_test_cuns.cu  main_thermal_pairs.cu  test_surf.cu  textures.cuh  vector_math.h
src/cuNSearch/include/: cuNSearch.h
src/cuNSearch/src/: cuNSearchDeviceData.h
src/cuda/: Boundary_Condition.cuh  CMakeLists.txt  Contact.cu  Contact_Fraser_OLD.cu  Domain.cu  Domain_d.cu  Domain_d.cu.bak  Domain_d.cuh  Domain_d.cuh.bak  Domain_d_SOLO_REF.h  Energy.cu  Functions.cu  Functions.cuh  Functions.h  Geom.cu  Geometry.cu  Interaction.cu  InteractionAlt.cu  InteractionAlt.cuh  Interaction_REF.cu  Interaction_global.cu  Interaction_new.cu  Interaction_sym.cu  KernelCorr.cu  KickDriftSolver.cu  Material.cu  Material.cuh  Material.h  Material_virtual.cu  Material_virtual.cuh  Mechanical.cu  Mechanical.cu.bak  Mesh.cu  Mesh.cuh  Mesh_reader.cu  NbSearch.cu  PartData.cuh  Particle.cu  Particle.h  Particle_d.cuh  (+14 more)
src/cuda/OLD_4ref/: Particle.cu
